--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -1810,6 +1810,9 @@ header {
 .clig {
     font-feature-settings: 'clig' 1; 
 }
+.no-clig {
+    font-feature-settings: 'clig' 0; 
+}
 .case {
     font-feature-settings: 'case' 1; 
 }
