--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -225,7 +225,9 @@ body {
   width: 100vw;
   overflow-x: hidden;
   line-height: 1;
-  -webkit-text-size-adjust: none;
+  -webkit-text-size-adjust: none; 
+  -moz-text-size-adjust: none;  
+  text-size-adjust: none;  
 }
 
 fontdue-cart-button,
