Fixed .select class issue

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -106,7 +106,7 @@ h4{
   font-weight: 700; /* bold */
 }
 
-.select{
+.character-viewer__monitor__details .select{
     font-weight: bold;
     display: inline-block;
     transition:
@@ -114,7 +114,7 @@ h4{
         transform 0.2s cubic-bezier(.4, 0, .2, 1);
 }
 
-.select:hover{
+.character-viewer__monitor__details .select:hover{
     transform: translateX(10px);
 }
 .character-viewer__block__character-list>div:hover{
