Add some small 'border' adjustments

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11,8 +11,6 @@
   scroll-snap-align: start; 
 }
 
-
-
 html {
   --scroll-offset: 125px;
   scroll-behavior: smooth;
@@ -2146,7 +2144,6 @@ h2 a.active {
     background-position: center center;
     background-repeat: repeat;
     box-shadow: inset 0 -30px 35px -15px rgba(0, 0, 0, 0.25);
-    border-bottom: 1px solid gray;
 }
 .titleImageSmall {
     margin-top: 20px; 
@@ -2260,6 +2257,16 @@ div.image {
 .topline {
     border-top: 1px solid #202020;
 }
+
+
+.type-tester .select-button-hover-parent:first-child {
+  border-top: none;
+}
+
+.page-admin .titleImage{
+    border-bottom: 1px solid #202020;
+}
+
 .column p {
     margin: 0 40px 0 0;
 }
