--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -2758,6 +2758,16 @@ h2 a:hover{
     }
 }
 
+@media (max-width: 600px) {
+    h1 .proforma-classic,
+    .responder-p-bold .responder-p-book,
+    .powerlift .powerlift-outline,
+    .bitcount-bold .bitcount {
+        display: block;
+        margin-top: 0.2em; /* optioneel voor wat ruimte */
+    }
+}
+
 @media (max-width: 768px) {
     html, body {
       overflow-x: hidden;
@@ -2860,6 +2870,7 @@ h2 a:hover{
         margin: 0px;
         margin-top: 10px;
       }
+
     #weightsStyles h1, #openTypeFeatures h1, div.responsiveHide h1{
         padding-top: 0px;
         padding-bottom: 10px;
