--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -144,6 +144,7 @@ h2 a:hover, .sectionNavList a:hover, .menuBox ul li:hover, ol li a, ul li a,
     color: #4E76C0;  
 }
 
+.type-tester-select .select:hover,
 h2 a:active, .sectionNavList a:active, .menuBox ul li:hover, ol li a:hover, ul li a:hover,
 .character-viewer__monitor__details>span>label:hover,
 .type-tester__features-button__button:hover {
