--- a/templates/productus.html
+++ b/templates/productus.html
@@ -129,7 +129,7 @@
                 TYPETR
             </a>
         </div>
-        <div class="familyName upgrade" onclick="document.getElementById('popup').style.display='block'">
+        <div class="familyName productus" onclick="document.getElementById('popup').style.display='block'">
             Productus&nbsp;<span class="andMore upgrade-thin">and more...</span>
         </div>
 
