Changes border-bottom color #sectionNav

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2430,7 +2430,7 @@ div.image {
     z-index: 1000;
 
     background-color: #F0F0F0;      
-    border-bottom: 1px solid #202020;
+    border-bottom: 1px solid gray;
     box-shadow: 0 14px 16px rgba(0, 0, 0, 0.2);
 
     opacity: 0;
